# serde

./: .drone.yml  README.md
.github/: pull.yml
serde/: Cargo.toml
serde/src/: lib.rs
serde/src/de/: impls.rs  value.rs
serde/src/ser/: impls.rs  mod.rs
serde_test/: Cargo.toml
serde_test/src/: de.rs  lib.rs  ser.rs
sgx/: Cargo.toml  Xargo.toml  serde  serde_derive  serde_test
sgx/serde-sgx-test/: Makefile
sgx/serde-sgx-test/enclave/: Cargo.toml  Makefile
sgx/serde-sgx-test/enclave/rust-fnv/: Cargo.toml  lib.rs
sgx/serde-sgx-test/enclave/src/: lib.rs  test_de.rs  test_macros.rs
