[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
serde = { path = "../../serde", features = ["mesalock_sgx_cargo", "rc", "unstable"] }
serde_derive = { path = "../../serde_derive" }
serde_test = { path = "../../serde_test", features = ["mesalock_sgx_cargo"] }
fnv = { path = "rust-fnv" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = "1.0"
sgx_tstd = "1.0"
sgx_tunittest = "1.0"
